--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3109,3 +3109,18 @@ section.announcement {
 .announcement-block-icon { 
   max-width: 130px; 
 }
+.hbotQl {
+  text-overflow: clip!important;
+  white-space: normal!important;
+}
+.beUiVL{
+  font-size: 14px!important;
+  font-weight: bold!important;
+}
+.dtqzBx div{
+  text-overflow: clip!important;
+  white-space: normal!important;
+}
+.bQdYbR{
+  min-width: auto!important;
+}
