--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3119,8 +3119,8 @@ section.announcement {
 }
 .dtqzBx div{
   text-overflow: clip!important;
-  white-space: normal!important;
+  /* white-space: normal!important; */
 }
 .bQdYbR{
-  min-width: auto!important;
+  min-width: fit-content!important;
 }
