--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3503,7 +3503,7 @@ input.daterangepickerstyle-sm {
 }
 .prize-div .prize-content-part {
   padding: 10px;
-  white-space: nowrap;	
+  /* white-space: nowrap;	 */
 }
 .w-amt-div {
   background: #b91a5d;
