--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -415,6 +415,29 @@
       box-shadow: 0px 8px 9px 0px rgb(0 0 0 / 27%);
 
   }
+  .btn-white {
+    background-image: white;
+    border: 1px solid #303030;
+    padding: 15px 30px;
+    text-decoration: none;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 600;
+    color: #000;
+    text-transform: uppercase;
+    font-family: "Open Sans";
+    transition: all 250ms;
+  }
+  .btn-white:hover {
+    background: #eeeeee; /* Old browsers */
+    background: -moz-linear-gradient(top, #eeeeee 0%, #eeeeee 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #eeeeee 0%,#eeeeee 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #eeeeee 0%,#eeeeee 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    box-shadow: 0px 8px 9px 0px rgb(0 0 0 / 27%);
+    color: black;
+    border: 1px solid #d8d8d8;
+
+}
   .rounded-full {
   border-radius: 30px;
   }
