--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1097,8 +1097,8 @@
       width: 40px!important;
       height: 40px!important;
     }
-    .clearfix span.d-block.btn-yellow.rounded-full {
-      margin: 10px;
+    .clearfix span.d-block.rounded-full {
+      margin: 5px 0px;
   }
   }
   
@@ -3218,8 +3218,18 @@ section.announcement {
   max-width: 130px; 
 }
 
+/* .iSAVrt */
+/* .bQdYbR  */
+.glyQNg{
+  padding: 2px!important;
+  padding-left: 15px!important;
+}
 /* invesment module */  
-  
+.eVPPvF{
+  padding: 2px!important;
+  padding-left: 15px!important;
+
+}
 .back-section {  
   height: auto;  
   padding: 30px;  
@@ -3249,7 +3259,9 @@ section.announcement {
   border-radius: 15px;  
   box-shadow: 0px 0px 18px 8px rgb(0 0 0 / 20%);  
 }  
-  
+.bQdYbR{
+  min-width: 80px!important;
+}
 @media (max-width:574.999px) {  
   .back-section:before {  
       width: 100%;  
