--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2724,6 +2724,10 @@
     height: 100%;
     width: 100%;
   }
+  .react-datepicker__day_sushil {
+    position: relative;
+    pointer-events: auto !important;
+  }
     @media (min-width: 576px) {
     .container-sm,
     .container {
