--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -464,6 +464,7 @@
     margin-right: 20px !important;
     position: relative;
     color: #fff;
+    float: left;
     }
     .marque-div ul li:hover {
     cursor: pointer;
