--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3097,7 +3097,6 @@ section.announcement {
 }
 
 /* .iSAVrt */
-/* .bQdYbR  */
 .kmecXQ{
   min-width: 50px!important
 }
@@ -3154,9 +3153,9 @@ section.announcement {
   border-radius: 15px;  
   box-shadow: 0px 0px 18px 8px rgb(0 0 0 / 20%);  
 }  
-/* .bQdYbR{
+.bQdYbR{
   min-width: 80px!important;
-} */
+}
 @media (max-width:574.999px) {  
   .back-section:before {  
       width: 100%;  
