--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4515,3 +4515,24 @@ box-shadow: inset 0px 0px 20px 10px rgb(0 0 0 / 20%);
 .footer-links ul li a:hover {
     color: #ffc107;
 }
+@media (max-width:450px) { 
+  .header-top .container { 
+   padding-left:5px; 
+   padding-right:5px; 
+  } 
+  .right-part-menu .right-part-list li { 
+  margin-right:4px; 
+  } 
+  .right-part-menu .right-part-list li .user-details { 
+  font-size:11px; 
+  } 
+   
+  button.lanugae-selector { 
+  width:70px; 
+  } 
+  } 
+  @media (max-width:650px) { 
+  .hide-650 { 
+      display:none !important; 
+  } 
+  }
