change to 4d bet nymber and change number input box size

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2755,6 +2755,11 @@
     box-shadow: none;
     outline: 0;
   }
+  @media (max-width: 575px) {
+    .search-number-daterangepickerstyle{
+      width: 100%;
+    }
+  }
     @media (min-width: 576px) {
     .container-sm,
     .container {
